RESOLVED FIXED159858
DFG CSE is broken for MultiGetByOffset
https://bugs.webkit.org/show_bug.cgi?id=159858
Summary DFG CSE is broken for MultiGetByOffset
Filip Pizlo
Reported 2016-07-16 15:37:01 PDT
Patch forthcoming.
Attachments
the patch (3.65 KB, patch)
2016-07-16 16:35 PDT, Filip Pizlo
saam: review+
performance (79.20 KB, text/plain)
2016-07-16 16:35 PDT, Filip Pizlo
no flags
patch for landing (3.58 KB, patch)
2016-07-17 12:09 PDT, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2016-07-16 16:35:17 PDT
Created attachment 283854 [details] the patch
Filip Pizlo
Comment 2 2016-07-16 16:35:58 PDT
Created attachment 283855 [details] performance It's cheap to disable CSE for MultiGetByOffset, probably because B3 also does CSE and can handle the CFG constructs inside MultiGetByOffset.
Saam Barati
Comment 3 2016-07-16 22:17:36 PDT
Comment on attachment 283854 [details] the patch r=me
Filip Pizlo
Comment 4 2016-07-17 12:09:28 PDT
Created attachment 283870 [details] patch for landing
Filip Pizlo
Comment 5 2016-07-17 15:01:53 PDT
Note You need to log in before you can comment on or make changes to this bug.